--- a/src/app/days/days.component.html
+++ b/src/app/days/days.component.html
@@ -13,14 +13,14 @@
           </div>
         </div>
         <div class="row">
-          <div class="col s6">
+          <div class="col s12 m6">
             <div class="card">
               <div class="card-content">
                 {{ question.origin }}
               </div>
             </div>
           </div>
-          <div class="col s6">
+          <div class="col s12 m6">
             <div class="card">
               <div class="card-content">
                 <div class="input-field">
@@ -36,7 +36,44 @@
             <button class="btn green" (click)="checkAnswer()">Validate</button>
             <button class="btn orange" *ngIf="!show" (click)="show = true">Show</button>
             <button class="btn red" *ngIf="show" (click)="selectQuestion()">Skip</button>
+            <button class="btn red right" (click)="course = !course" *ngIf="!course">Show course</button>
             <button class="btn blue right" (click)="reverse(); selectQuestion()">Change way</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="card" *ngIf="course">
+      <div class="card-content">
+        <div class="card-title">Course</div>
+        <table>
+          <thead>
+            <tr>
+              <th>Question</th>
+              <th>Answer</th>
+              <th>Active</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let question of questions">
+              <td>{{ question.origin }}</td>
+              <td>{{ question.answer }}</td>
+              <td class="switch">
+                <label>
+                  Off
+                  <input type="checkbox" name="{{ question.origin }}" [(ngModel)]="question.enabled">
+                  <span class="lever"></span>
+                  On
+                </label>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+
+        <div class="row"></div>
+        <div class="row">
+          <div class="col s12">
+            <button class="btn red" (click)="course = !course">Hide</button>
           </div>
         </div>
       </div>
@@ -47,6 +84,7 @@
         <div class="card-title">Other rules</div>
         <ul>
           <li>Add <strong>na</strong> to say <strong>on the day</strong></li>
+          <li>Pronouciation <a href="https://www.youtube.com/watch?v=1hVTsDtcQ9A" target="_blank">video</a></li>
         </ul>
       </div>
     </div>
