[~] Updated month course display && days hide button color

--- a/src/app/days/days.component.html
+++ b/src/app/days/days.component.html
@@ -73,7 +73,7 @@
         <div class="row"></div>
         <div class="row">
           <div class="col s12">
-            <button class="btn red" (click)="course = !course">Hide</button>
+            <button class="btn green" (click)="course = !course">Hide</button>
           </div>
         </div>
       </div>
