--- a/src/app/months/months.component.html
+++ b/src/app/months/months.component.html
@@ -1,6 +1,6 @@
 <form #answerForm="ngForm">
   <div class="container">
-    <div class="card" *ngIf="!course">
+    <div class="card">
       <div class="card-content">
         <div class="card-title">Months</div>
         <div class="row" *ngIf="show">
@@ -36,7 +36,7 @@
             <button class="btn green" (click)="checkAnswer()">Validate</button>
             <button class="btn orange" *ngIf="!show" (click)="show = true">Show</button>
             <button class="btn red" *ngIf="show" (click)="selectQuestion()">Skip</button>
-            <button class="btn red right" (click)="course = !course">Show course</button>
+            <button class="btn red right" (click)="course = !course" *ngIf="!course">Show course</button>
             <button class="btn blue right" (click)="reverse(); selectQuestion()">Change way</button>
           </div>
         </div>
@@ -45,8 +45,7 @@
 
     <div class="card" *ngIf="course">
       <div class="card-content">
-        <div class="card-title">Months</div>
-
+        <div class="card-title">Course</div>
         <table>
           <thead>
             <tr>
@@ -74,8 +73,7 @@
         <div class="row"></div>
         <div class="row">
           <div class="col s12">
-            <button class="btn green" (click)="course = !course">Hide course</button>
-            <button class="btn blue right" (click)="reverse(); selectQuestion()">Change way</button>
+            <button class="btn green" (click)="course = !course">Hide</button>
           </div>
         </div>
       </div>
