[+] Added the doing page

--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -7,6 +7,7 @@
       <ul>
         <li><a routerLink="/days">Days</a></li>
         <li><a routerLink="/months">Months</a></li>
+        <li><a routerLink="/doing">What are you doing</a></li>
       </ul>
     </div>
   </div>
