--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -8,6 +8,7 @@
         <li><a routerLink="/days">Days</a></li>
         <li><a routerLink="/months">Months</a></li>
         <li><a routerLink="/doing">What are you doing</a></li>
+        <li><a routerLink="/head">Head elements</a></li>
       </ul>
     </div>
   </div>
