[+] Added Marital status page

--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -9,6 +9,7 @@
         <li><a routerLink="/months">Months</a></li>
         <li><a routerLink="/doing">What are you doing</a></li>
         <li><a routerLink="/head">Head elements</a></li>
+        <li><a routerLink="/marital-status">Marital status</a></li>
       </ul>
     </div>
   </div>
