[+] Added hobbies page

--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -10,6 +10,7 @@
         <li><a routerLink="/doing">What are you doing</a></li>
         <li><a routerLink="/head">Head elements</a></li>
         <li><a routerLink="/marital-status">Marital status</a></li>
+        <li><a routerLink="/hobbies">Hobbies</a></li>
       </ul>
     </div>
   </div>
