[+] Added persons page

--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -11,6 +11,7 @@
         <li><a routerLink="/head">Head elements</a></li>
         <li><a routerLink="/marital-status">Marital status</a></li>
         <li><a routerLink="/hobbies">Hobbies</a></li>
+        <li><a routerLink="/persons">Persons</a></li>
       </ul>
     </div>
   </div>
