[+] Added page 5(6): questions

--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -2,16 +2,56 @@
   <div class="card">
     <div class="card-content">
       <div class="card-title">Index</div>
-      <p>Learn the finnish vocabulary by questioning yourself!</p>
-      <p>You will find for each resource learned a dedicated page. For each page, you can disable some question in order to learn them little by little or focus on the more difficult ones</p>
+      <div class="row">
+        <div class="col s12 m4">
+          <div class="card">
+            <div class="card-content">
+              <div class="card-title">Page 5(6)</div>
+              <ul>
+                <li><a routerLink="/questions">Questions</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
+        <div class="col s12 m4">
+          <div class="card">
+            <div class="card-content">
+              <div class="card-title">Page 18</div>
+              <ul>
+                <li><a routerLink="/doing">What are you doing</a></li>
+                <li><a routerLink="/days">Days</a></li>
+                <li><a routerLink="/months">Months</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
+        <div class="col s12 m4">
+          <div class="card">
+            <div class="card-content">
+              <div class="card-title">Page 26</div>
+              <ul>
+                <li><a routerLink="/head">Head elements</a></li>
+                <li><a routerLink="/marital-status">Marital status</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
+        <div class="col s12 m4">
+          <div class="card">
+            <div class="card-content">
+              <div class="card-title">Page 27</div>
+              <ul>
+                <li><a routerLink="/hobbies">Hobbies</a></li>
+                <li><a routerLink="/persons">Persons</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
       <ul>
-        <li><a routerLink="/days">Days</a></li>
-        <li><a routerLink="/months">Months</a></li>
-        <li><a routerLink="/doing">What are you doing</a></li>
-        <li><a routerLink="/head">Head elements</a></li>
-        <li><a routerLink="/marital-status">Marital status</a></li>
-        <li><a routerLink="/hobbies">Hobbies</a></li>
-        <li><a routerLink="/persons">Persons</a></li>
       </ul>
     </div>
   </div>
