--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="card">
     <div class="card-content">
-      <div class="card-title">Index</div>
+      <div class="card-title">Index Finnish 1</div>
       <div class="row">
         <div class="col s12 m4">
           <div class="card">
@@ -53,6 +53,24 @@
       </div>
       <ul>
       </ul>
+    </div>
+  </div>
+
+  <div class="card">
+    <div class="card-content">
+      <div class="card-title">Index Finnish 2</div>
+      <div class="row">
+        <div class="col s12 m4">
+          <div class="card">
+            <div class="card-content">
+              <div class="card-title">Page 3</div>
+              <ul>
+                <li><a routerLink="/quizz/kaupassa">Kaupassa</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>/
     </div>
   </div>
 </div>
