--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -65,12 +65,32 @@
             <div class="card-content">
               <div class="card-title">Page 3</div>
               <ul>
-                <li><a routerLink="/quizz/kaupassa">Kaupassa</a></li>
+                <li><a routerLink="/quizz/ruoka">Ruoka</a></li>
               </ul>
             </div>
           </div>
         </div>
-      </div>/
+        <div class="col s12 m4">
+          <div class="card">
+            <div class="card-content">
+              <div class="card-title">Page 4</div>
+              <ul>
+                <li><a routerLink="/quizz/ruoka_adjektiivit">Ruoka adjektiivit</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col s12 m4">
+        <div class="card">
+          <div class="card-content">
+            <div class="card-title">Pages 11 - 12</div>
+            <ul>
+              <li><a routerLink="/quizz/milloin">Milloin?</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </div>
