[+] Fixed column for the quizz page && voice script

--- a/src/app/quizz/quizz.component.html
+++ b/src/app/quizz/quizz.component.html
@@ -122,6 +122,7 @@
             </td>
           </tr>
         </table>
+        <button class="btn" (click)="showOptions = !showOptions">Hide</button>
       </div>
     </div>
 
